hard code font type, fix compile error

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,6 +10,6 @@
               'Roboto' | replace(' ', '+') + ':300,400,400i,700%7C' +
               'Roboto Mono' | replace(' ', '+')
             }}&display=fallback">
-  <style>body,input{font-family:"{{ Roboto }}",-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"{{ Roboto Mono }}",SFMono-Regular,Consolas,Menlo,monospace}</style>
+  <style>body,input{font-family:"Roboto",-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"Roboto Mono",SFMono-Regular,Consolas,Menlo,monospace}</style>
   {% endif %}
 {% endblock %}
