--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,13 +3,13 @@
 -#}
 {% extends "base.html" %}
 
-{% block fonts %}
-  {% if font != false %}
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link rel="stylesheet" href="https://fonts.loli.net/css?family={{
-              'Roboto' | replace(' ', '+') + ':300,400,400i,700%7C' +
-              'Roboto Mono' | replace(' ', '+')
-            }}&display=fallback">
-  <style>body,input{font-family:"Roboto",-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"Roboto Mono",SFMono-Regular,Consolas,Menlo,monospace}</style>
-  {% endif %}
-{% endblock %}
+<!--{% block fonts %}-->
+<!--  {% if font != false %}-->
+<!--  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>-->
+<!--  <link rel="stylesheet" href="https://fonts.loli.net/css?family={{-->
+<!--              'Roboto' | replace(' ', '+') + ':300,400,400i,700%7C' +-->
+<!--              'Roboto Mono' | replace(' ', '+')-->
+<!--            }}&display=fallback">-->
+<!--  <style>body,input{font-family:"Roboto",-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"Roboto Mono",SFMono-Regular,Consolas,Menlo,monospace}</style>-->
+<!--  {% endif %}-->
+<!--{% endblock %}-->
