update zh home page

--- a/overrides/home_zh.html
+++ b/overrides/home_zh.html
@@ -19,8 +19,9 @@ This file was automatically generated - do not edit
 
   .tx-container {
     padding-top: 1rem;
+    background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)
     /*background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)*/
-    background: linear-gradient(to bottom, var(--md-primary-fg-color), hsla(280deg, 67%, 55%, 1) 99%, #fff 99%)
+    /*background: linear-gradient(to bottom, var(--md-primary-fg-color), hsla(280deg, 67%, 55%, 1) 99%, #fff 99%)*/
   }
 
   .tx-hero {
@@ -408,7 +409,6 @@ This file was automatically generated - do not edit
 
   /* 页脚部分样式结束 */
 </style>
-<style />
 <section class="tx-container">
   <div class="md-grid md-typeset">
     <div class="tx-hero">
