--- a/material/overrides/home_zh.html
+++ b/material/overrides/home_zh.html
@@ -415,7 +415,7 @@ This file was automatically generated - do not edit
       <div class="tx-hero__content">
         <h1>Apache Dubbo</h1>
         <p>{{ config.site_description }}</p>
-        <a href="/zh-cn/docs/2.7/user/quick-start.md" title="Quick Start" class="md-button md-button--primary">
+        <a href="zh-cn/docs/2.7/user/quick-start.md" title="Quick Start" class="md-button md-button--primary">
           快速开始
         </a>
         <a href="{{ config.repo_url }}" title="{{ lang.t('source.link.title') }}" class="md-button">
@@ -429,48 +429,47 @@ This file was automatically generated - do not edit
 <div class="text-center mt35">Dubbo 3.0 新特性</div>
 <div class=top-hr>
   <div class=feature-item>
-    <img src="./img/feature_loadbalances.png" alt="" />
+    <img src="./img/feature_transpart.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">基于 HTTP/2 高性能通信协议</div>
-      <div class="feature-detail">Dubbo3 协议基于 HTTP/2 构建，全面兼容 gRPC，对 Service Mesh、移动端设备更通、用更友好</div>
+      <div class="feature-title">面向接口代理的高性能RPC调用</div>
+      <div class="feature-detail">提供高性能的基于代理的远程调用能力，服务以接口为粒度，为开发者屏蔽远程调用底层细节。</div>
     </div>
   </div>
   <div class=feature-item>
     <img src="./img/feature_loadbalances.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">RPC 粒度的透明服务发现能力</div>
-      <div class="feature-detail">地址与 RPC 元数据解耦，实现业界唯一的 RPC 粒度服务自动发现，同时最小化地址推送资源占用，轻松共建百万实例微服务集群</div>
+      <div class="feature-title">智能负载均衡</div>
+      <div class="feature-detail">内置多种负载均衡策略，智能感知下游节点健康状况，显著减少调用延迟，提高系统吞吐量。</div>
     </div>
   </div>
   <div class=feature-item>
-    <img src="./img/feature_loadbalances.png" alt="" />
+    <img src="./img/feature_service.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">全面重构的流量管控策略</div>
-      <div class="feature-detail">提供基于标签匹配的全新路由规则，摆脱内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
+      <div class="feature-title">服务自动注册与发现</div>
+      <div class="feature-detail">支持多种注册中心服务，服务实例上下线实时感知。</div>
     </div>
   </div>
 </div>
 <div class=bottom-hr>
   <div class=feature-item>
-    <img src="./img/feature_loadbalances.png" alt="" />
+    <img src="./img/feature_hogh.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">面向接口，极致易用</div>
-      <div class="feature-detail">面向接口的编程模型，面向接口的服务治理能力</div>
+      <div class="feature-title">高度可扩展能力</div>
+      <div class="feature-detail">遵循微内核+插件的设计原则，所有核心能力如Protocol、Transport、Serialization被设计为扩展点，平等对待内置实现和第三方实现。</div>
     </div>
   </div>
   <div class=feature-item>
-    <img src="./img/feature_loadbalances.png" alt="" />
+    <img src="./img/feature_runtime.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">柔性</div>
-      <div class="feature-detail">提供基于标签匹配的全新路由规则，摆脱内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
+      <div class="feature-title">运行期流量调度</div>
+      <div class="feature-detail">内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
     </div>
   </div>
   <div class=feature-item>
-    <img src="./img/feature_loadbalances.png" alt="" />
+    <img src="./img/feature_maintenance.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">全面拥抱云原生</div>
-      <div class="feature-detail">服务发现下沉，支持 Kubernetes Native Service；通过对接原生 xDS 数据通信接口，提供云原生 ServiceMesh 平滑迁移方案
-      </div>
+      <div class="feature-title">可视化的服务治理与运维</div>
+      <div class="feature-detail">提供丰富服务治理、运维工具：随时查询服务元数据、服务健康状态及调用统计，实时下发路由策略、调整配置参数。</div>
     </div>
   </div>
 </div>
@@ -479,13 +478,27 @@ This file was automatically generated - do not edit
 </div>
 <div class=text-center>Dubbo 案例</div>
 <div class="top-hr hr-logos">
-  <div class=logos> <a href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
-          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
-          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
-          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
-          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
-          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> </div>
-</div> <!-- 合作伙伴结束 -->
+  <div class="logos">
+    <a href="https://www.alibaba.com" target="_blank">
+      <img src="./img/users_alibaba.png" alt="">
+    </a>
+    <a href="https://www.alibaba.com" target="_blank">
+      <img src="./img/users_kaola.png" alt="">
+    </a>
+    <a href="https://www.alibaba.com" target="_blank">
+      <img src="./img/users_icbc.png" alt="">
+    </a>
+    <a href="https://www.alibaba.com" target="_blank">
+      <img src="./img/users_telecom.png" alt="">
+    </a>
+    <a href="https://www.alibaba.com" target="_blank">
+      <img src="./img/users_chinalife.png" alt="">
+    </a>
+    <a href="https://www.alibaba.com" target="_blank">
+      <img src="./img/users_haier.png" alt="">
+    </a>
+  </div>
+  <!-- 合作伙伴结束 -->
 <div class="md-footer-meta md-typeset">
   <div class="md-footer-meta__inner md-grid">
     <div class="md-footer-copyright">
