--- a/material/overrides/home_zh_3.0.html
+++ b/material/overrides/home_zh_3.0.html
@@ -20,7 +20,7 @@ This file was automatically generated - do not edit
   .tx-container {
     padding-top: 1rem;
     background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)
-    /*background: linear-gradient(0deg,#04c0c6,#2ba3de 51%,#3f51b5)*/
+    /*background: linear-gradient(to bottom, var(--md-primary-fg-color), #04c0c6 99%, #fff 99%)*/
     /*background: linear-gradient(to bottom, var(--md-primary-fg-color), hsla(280deg, 67%, 55%, 1) 99%, #fff 99%)*/
   }
 
@@ -217,6 +217,7 @@ This file was automatically generated - do not edit
     margin: 20px 0;
   }
 
+"A"
   .text-center {
     text-align: center;
     padding-right: 15px;
@@ -344,17 +345,12 @@ This file was automatically generated - do not edit
     opacity: 1;
   }
 
-  .text-center {
-    text-align: center;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  .feature-item {
     font-family: 'Lato', sans-serif;
-    font-size: 23px;
     font-weight: 300;
-    padding-bottom: 10px;
-    margin-top: 15px;
+    box-sizing: border-box;
+    padding: 15px;
+    word-break: break-all
   }
 
   .bottom-hr {
@@ -373,16 +369,20 @@ This file was automatically generated - do not edit
     display: flex;
   }
 
-  .feature-item {
+  .text-center {
+    text-align: center;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
     font-family: 'Lato', sans-serif;
+    font-size: 23px;
     font-weight: 300;
-    box-sizing: border-box;
-    padding: 15px;
-    word-break: break-all
+    padding-bottom: 10px;
+    margin-top: 15px;
   }
 
   .feature-right {
-    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -415,96 +415,77 @@ This file was automatically generated - do not edit
       <div class="tx-hero__content">
         <h1>Apache Dubbo</h1>
         <p>{{ config.site_description }}</p>
-        <a href="en-us/docs/2.7/user/quick-start.md" title="Quick Start" class="md-button md-button--primary">
-          Quick Start
+        <a href="zh-cn/docs/2.7/user/quick-start.md" title="Quick Start" class="md-button md-button--primary">
+          快速开始
         </a>
         <a href="{{ config.repo_url }}" title="{{ lang.t('source.link.title') }}" class="md-button">
-          Visit GitHub
+          前往GitHub
         </a>
       </div>
     </div>
   </div>
-
-
 </section>
-<div class="text-center mt35">Dubbo Features</div>
-<div class="top-hr">
-  <div class="feature-item">
-    <img src="./img/feature_transpart.png" alt="" />
-    <div class="feature-right">
-      <div class="feature-title">Transparent interface based RPC</div>
-      <div class="feature-detail">Dubbo provides high performance interface based RPC, which is transparent to users.</div>
-    </div>
-  </div>
-  <div class="feature-item">
+
+<div class="text-center mt35">Dubbo 3.0 新特性</div>
+<div class=top-hr>
+  <div class=feature-item>
     <img src="./img/feature_loadbalances.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">Intelligent load balancing</div>
-      <div class="feature-detail">Dubbo supports multiple load balancing strategies out of the box, which perceives downstream service status to reduce overall latency and improve system throughput.</div>
+      <div class="feature-title">基于 HTTP/2 高性能通信协议</div>
+      <div class="feature-detail">Dubbo3 协议基于 HTTP/2 构建，全面兼容 gRPC，对 Service Mesh、移动端设备更通、用更友好</div>
     </div>
   </div>
-  <div class="feature-item">
-    <img src="./img/feature_service.png" alt="" />
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">Automatic service registration and discovery</div>
-      <div class="feature-detail">Dubbo supports multiple service registries, which can detect service online/offline instantly.</div>
+      <div class="feature-title">RPC 粒度的透明服务发现能力</div>
+      <div class="feature-detail">地址与 RPC 元数据解耦，实现业界唯一的 RPC 粒度服务自动发现，同时最小化地址推送资源占用，轻松共建百万实例微服务集群</div>
+    </div>
+  </div>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
+    <div class="feature-right">
+      <div class="feature-title">全面重构的流量管控策略</div>
+      <div class="feature-detail">提供基于标签匹配的全新路由规则，摆脱内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
     </div>
   </div>
 </div>
-<div class="bottom-hr">
-  <div class="feature-item">
-    <img src="./img/feature_hogh.png" alt="" />
+<div class=bottom-hr>
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">High extensibility</div>
-      <div class="feature-detail">Dubbo's micro-kernel and plugin design ensures that it can easily be extended by third party implementation across core features like Protocol, Transport, and Serialization.</div>
+      <div class="feature-title">面向接口，极致易用</div>
+      <div class="feature-detail">面向接口的编程模型，面向接口的服务治理能力</div>
     </div>
   </div>
-  <div class="feature-item">
-    <img src="./img/feature_runtime.png" alt="" />
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">Runtime traffic routing</div>
-      <div class="feature-detail">Runtime traffic routing
-        Dubbo can be configured at runtime so that traffic can be routed according to different rules, which makes it easy to support features like blue-green deployment, data center aware routing, etc.</div>
+      <div class="feature-title">柔性</div>
+      <div class="feature-detail">提供基于标签匹配的全新路由规则，摆脱内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
     </div>
   </div>
-  <div class="feature-item">
-    <img src="./img/feature_maintenance.png" alt="" />
+  <div class=feature-item>
+    <img src="./img/feature_loadbalances.png" alt="" />
     <div class="feature-right">
-      <div class="feature-title">Visualized service governance</div>
-      <div class="feature-detail">Dubbo provides rich tools for service governance and maintenance such as querying service metadata, health status and statistics.
+      <div class="feature-title">全面拥抱云原生</div>
+      <div class="feature-detail">服务发现下沉，支持 Kubernetes Native Service；通过对接原生 xDS 数据通信接口，提供云原生 ServiceMesh 平滑迁移方案
       </div>
     </div>
   </div>
 </div>
-<div class="top-hr">
-  <div class="hr">
-  </div>
+<div class=top-hr>
+  <div class=hr> </div>
 </div>
-
-<div class="text-center">Use Cases</div>
+<div class=text-center>Dubbo 案例</div>
 <div class="top-hr hr-logos">
-  <div class="logos">
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_alibaba.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_kaola.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_icbc.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_telecom.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_chinalife.png" alt="">
-    </a>
-    <a href="https://www.alibaba.com" target="_blank">
-      <img src="./img/users_haier.png" alt="">
-    </a>
-  </div>
-</div>
-<!-- 合作伙伴结束 -->
+  <div class=logos> <a href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> <a
+          href=https://www.alibaba.com target=_blank> <img src=./img/users_alibaba.png alt> </a> </div>
+</div> <!-- 合作伙伴结束 -->
 <div class="md-footer-meta md-typeset">
   <div class="md-footer-meta__inner md-grid">
     <div class="md-footer-copyright">
