--- a/404.html
+++ b/404.html
@@ -33,16 +33,23 @@
     } else if (originalHref.indexOf("docs/developers/") > -1) {
       window.location.href = newHref("docs/developers/", "developers/");
     } else if (originalHref.indexOf("blog/index.html") >-1) {
-      window.location.href = newHref("blog/index.html", "blog/2019-2020.html");
+      window.location.href = newHref("blog/index.html", "blog/dubbo-101/");
     } else {
-      window.location.href = "http://dubbo.apache.org/en-us/";
+      // window.location.href = "http://dubbo.apache.org/en-us/";
     }
 
     function newHref(path, newPath) {
       var idx = originalHref.indexOf(path);
       var part1 = originalHref.substring(0, idx);
-      var part2 = originalHref.substring(idx + path.length);
-      return part1 + newPath + part2;
+      var part2 = "";
+      if (idx + path.length < originalHref.length -1) {
+        part2 = originalHref.substring(idx + path.length);
+      }
+      var newHref = part1 + newPath + part2;
+      if (newHref.endsWith('.html')) {
+        newHref = newHref.substr(0, newHref.length - 5) + "/";
+      }
+      return newHref;
     }
   </script>
 </body>
