fix home page style

--- a/material/overrides/home_en.html
+++ b/material/overrides/home_en.html
@@ -407,6 +407,23 @@ This file was automatically generated - do not edit
     margin-top: 35px;
   }
 
+  #my-footer ul {
+    list-style: none;
+    margin-left: 50px;
+    display: inline;
+  }
+
+  #my-footer li {
+    display: inline;
+    line-height: 40px;
+    float:left
+  }
+
+  #my-footer img {
+    max-width: 6rem;
+    max-height: 2.5rem;
+  }
+
   /* 页脚部分样式结束 */
 </style>
 <section class="tx-container">
@@ -515,6 +532,7 @@ This file was automatically generated - do not edit
         <ul>
           <li><a href="http://www.apache.org">Foundation</a></li>
           <li><a href="http://www.apache.org/licenses/">License</a></li>
+          <li><a href="https://www.apache.org/security/">Security</a></li>
           <li><a href="http://www.apache.org/events/current-event">Events</a></li>
           <li><a href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
           <li><a href="http://www.apache.org/foundation/thanks.html">Thanks</a></li>
