--- a/material/overrides/home_zh.html
+++ b/material/overrides/home_zh.html
@@ -407,6 +407,22 @@ This file was automatically generated - do not edit
     margin-top: 35px;
   }
 
+  #my-footer ul {
+    list-style: none;
+    margin-left: 50px;
+    display: inline;
+  }
+
+  #my-footer li {
+    display: inline;
+    line-height: 40px;
+    float:left
+  }
+
+  #my-footer img {
+    max-width: 6rem;
+    max-height: 2.5rem;
+  }
   /* 页脚部分样式结束 */
 </style>
 <section class="tx-container">
@@ -500,28 +516,30 @@ This file was automatically generated - do not edit
       <img src="./img/users_haier.png" alt="">
     </a>
   </div>
+</div>
   <!-- 合作伙伴结束 -->
-  <div class="md-footer-meta md-typeset">
-    <div class="md-footer-meta__inner md-grid">
-      <div class="md-footer-social">
-        <div class="md-footer-copyright text-center" id="my-footer">
-          <img style="float:left;" src="img/apache_logo.png"/>
-          <ul>
-            <li><a href="http://www.apache.org">Foundation</a></li>
-            <li><a href="http://www.apache.org/licenses/">License</a></li>
-            <li><a href="http://www.apache.org/events/current-event">Events</a></li>
-            <li><a href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
-            <li><a href="http://www.apache.org/foundation/thanks.html">Thanks</a></li>
-          </ul>
-        </div>
-        <div class="md-footer-copyright">
-          <div class="md-footer-copyright__highlight">
-            Copyright © 2018-2020 The Apache Software Foundation. Apache and the Apache feather logo are trademarks of The Apache Software Foundation.
-          </div>
+<div class="md-footer-meta md-typeset">
+  <div class="md-footer-meta__inner md-grid">
+    <div class="md-footer-social">
+      <div class="md-footer-copyright text-center" id="my-footer">
+        <img style="float:left; " src="img/apache_logo.png"/>
+        <ul>
+          <li><a href="http://www.apache.org">Foundation</a></li>
+          <li><a href="http://www.apache.org/licenses/">License</a></li>
+          <li><a href="https://www.apache.org/security/">Security</a></li>
+          <li><a href="http://www.apache.org/events/current-event">Events</a></li>
+          <li><a href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
+          <li><a href="http://www.apache.org/foundation/thanks.html">Thanks</a></li>
+        </ul>
+      </div>
+      <div class="md-footer-copyright">
+        <div class="md-footer-copyright__highlight">
+          Copyright © 2018-2020 The Apache Software Foundation. Apache and the Apache feather logo are trademarks of The Apache Software Foundation.
         </div>
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
 {% block content %}{% endblock %}
 {% block footer %}{% endblock %}
