--- a/material/overrides/home_zh.html
+++ b/material/overrides/home_zh.html
@@ -411,6 +411,7 @@ This file was automatically generated - do not edit
     list-style: none;
     margin-left: 50px;
     display: inline;
+    font-size: 0.8em;
   }
 
   #my-footer li {
