--- a/material/overrides/home_en.html
+++ b/material/overrides/home_en.html
@@ -448,21 +448,21 @@ This file was automatically generated - do not edit
 <div class="text-center mt35">Dubbo Features</div>
 <div class="top-hr">
   <div class="feature-item">
-    <img src="./img/feature_transpart.png" alt="" />
+<!--    <img src="./img/feature_transpart.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">Transparent interface based RPC</div>
       <div class="feature-detail">Dubbo provides high performance interface based RPC, which is transparent to users.</div>
     </div>
   </div>
   <div class="feature-item">
-    <img src="./img/feature_loadbalances.png" alt="" />
+<!--    <img src="./img/feature_loadbalances.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">Intelligent load balancing</div>
       <div class="feature-detail">Dubbo supports multiple load balancing strategies out of the box, which perceives downstream service status to reduce overall latency and improve system throughput.</div>
     </div>
   </div>
   <div class="feature-item">
-    <img src="./img/feature_service.png" alt="" />
+<!--    <img src="./img/feature_service.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">Automatic service registration and discovery</div>
       <div class="feature-detail">Dubbo supports multiple service registries, which can detect service online/offline instantly.</div>
@@ -471,14 +471,14 @@ This file was automatically generated - do not edit
 </div>
 <div class="bottom-hr">
   <div class="feature-item">
-    <img src="./img/feature_hogh.png" alt="" />
+<!--    <img src="./img/feature_hogh.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">High extensibility</div>
       <div class="feature-detail">Dubbo's micro-kernel and plugin design ensures that it can easily be extended by third party implementation across core features like Protocol, Transport, and Serialization.</div>
     </div>
   </div>
   <div class="feature-item">
-    <img src="./img/feature_runtime.png" alt="" />
+<!--    <img src="./img/feature_runtime.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">Runtime traffic routing</div>
       <div class="feature-detail">Runtime traffic routing
@@ -486,7 +486,7 @@ This file was automatically generated - do not edit
     </div>
   </div>
   <div class="feature-item">
-    <img src="./img/feature_maintenance.png" alt="" />
+<!--    <img src="./img/feature_maintenance.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">Visualized service governance</div>
       <div class="feature-detail">Dubbo provides rich tools for service governance and maintenance such as querying service metadata, health status and statistics.
