--- a/material/main.html
+++ b/material/main.html
@@ -24,3 +24,11 @@
 <meta name="twitter:image" content="{{ image }}">
 <link rel="stylesheet" href="{{ 'assets/stylesheets/overrides.011ebae6.min.css' | url }}">
 {% endblock %}
+{% block announce %}
+<a href="https://chickenlj.github.io/incubator-dubbo-website/en-us/docs/3.0/user/preface/background/">
+  Details of the next generation <strong>Dubbo 3.0</strong>
+  <span class="twemoji twitter">
+      {% include ".icons/material/dev-to.svg" %}
+    </span>
+</a>
+{% endblock %}
