--- a/material/main.html
+++ b/material/main.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="{{ 'assets/stylesheets/overrides.011ebae6.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-<a href="https://chickenlj.github.io/incubator-dubbo-website/en-us/docs/3.0/user/preface/background/">
+<a href="https://dubbo.apache.org/en-us/docs/3.0/user/preface/background/">
   Details of the next generation <strong>Dubbo 3.0</strong>
   <span class="twemoji twitter">
       {% include ".icons/material/dev-to.svg" %}
