--- a/material/overrides/home_zh.html
+++ b/material/overrides/home_zh.html
@@ -446,21 +446,21 @@ This file was automatically generated - do not edit
 <div class="text-center mt35">Dubbo 3.0 新特性</div>
 <div class=top-hr>
   <div class=feature-item>
-    <img src="./img/feature_transpart.png" alt="" />
+<!--    <img src="./img/feature_transpart.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">面向接口代理的高性能RPC调用</div>
       <div class="feature-detail">提供高性能的基于代理的远程调用能力，服务以接口为粒度，为开发者屏蔽远程调用底层细节。</div>
     </div>
   </div>
   <div class=feature-item>
-    <img src="./img/feature_loadbalances.png" alt="" />
+<!--    <img src="./img/feature_loadbalances.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">智能负载均衡</div>
       <div class="feature-detail">内置多种负载均衡策略，智能感知下游节点健康状况，显著减少调用延迟，提高系统吞吐量。</div>
     </div>
   </div>
   <div class=feature-item>
-    <img src="./img/feature_service.png" alt="" />
+<!--    <img src="./img/feature_service.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">服务自动注册与发现</div>
       <div class="feature-detail">支持多种注册中心服务，服务实例上下线实时感知。</div>
@@ -469,21 +469,21 @@ This file was automatically generated - do not edit
 </div>
 <div class=bottom-hr>
   <div class=feature-item>
-    <img src="./img/feature_hogh.png" alt="" />
+<!--    <img src="./img/feature_hogh.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">高度可扩展能力</div>
       <div class="feature-detail">遵循微内核+插件的设计原则，所有核心能力如Protocol、Transport、Serialization被设计为扩展点，平等对待内置实现和第三方实现。</div>
     </div>
   </div>
   <div class=feature-item>
-    <img src="./img/feature_runtime.png" alt="" />
+<!--    <img src="./img/feature_runtime.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">运行期流量调度</div>
       <div class="feature-detail">内置条件、脚本等路由策略，通过配置不同的路由规则，轻松实现灰度发布，同机房优先等功能</div>
     </div>
   </div>
   <div class=feature-item>
-    <img src="./img/feature_maintenance.png" alt="" />
+<!--    <img src="./img/feature_maintenance.png" alt="" />-->
     <div class="feature-right">
       <div class="feature-title">可视化的服务治理与运维</div>
       <div class="feature-detail">提供丰富服务治理、运维工具：随时查询服务元数据、服务健康状态及调用统计，实时下发路由策略、调整配置参数。</div>
