--- a/material/overrides/home_en.html
+++ b/material/overrides/home_en.html
@@ -433,7 +433,7 @@ This file was automatically generated - do not edit
       <div class="tx-hero__content">
         <h1>Apache Dubbo</h1>
         <p>{{ config.site_description }}</p>
-        <a href="en-us/docs/2.7/user/quick-start.md" title="Quick Start" class="md-button md-button--primary">
+        <a href="docs/2.7/user/quick-start.md" title="Quick Start" class="md-button md-button--primary">
           Quick Start
         </a>
         <a href="{{ config.repo_url }}" title="{{ lang.t('source.link.title') }}" class="md-button">
