fix quick start link

--- a/material/overrides/home_zh.html
+++ b/material/overrides/home_zh.html
@@ -432,7 +432,7 @@ This file was automatically generated - do not edit
       <div class="tx-hero__content">
         <h1>Apache Dubbo</h1>
         <p>{{ config.site_description }}</p>
-        <a href="docs/2.7/user/quick-start.md" title="Quick Start" class="md-button md-button--primary">
+        <a href="docs/2.7/user/quick-start/" title="Quick Start" class="md-button md-button--primary">
           快速开始
         </a>
         <a href="{{ config.repo_url }}" title="{{ lang.t('source.link.title') }}" class="md-button">
