--- a/404.html
+++ b/404.html
@@ -21,6 +21,8 @@
 <!--<script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>-->
 <script>
     var originalHref = window.location.href;
+    console.log(originalHref);
+    console.log(originalHref.indexOf("docs/user/"));
     if (originalHref.indexOf("docs/user/") > -1) {
         window.location.href = newHref("docs/user/", "docs/2.7/user/");
     } else if (originalHref.indexOf("docs/dev/") > -1) {
