does not redirect to home page
Former-commit-id: 655d678e224a0487e677f89a2fb244138eeeeca0

--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
     } else if (originalHref.indexOf("blog/index.html") >-1) {
         window.location.href = newHref("blog/index.html", "blog/dubbo-101/");
     } else {
-        window.location.href = "http://dubbo.apache.org/en-us/";
+        // window.location.href = "http://dubbo.apache.org/en-us/";
     }
 
     function newHref(path, newPath) {
