--- a/404.html
+++ b/404.html
@@ -24,7 +24,8 @@
     console.log(originalHref);
     console.log(originalHref.indexOf("docs/user/"));
     if (originalHref.indexOf("docs/user/") > -1) {
-        window.location.href = newHref("docs/user/", "docs/2.7/user/");
+        // window.location.href = newHref("docs/user/", "docs/2.7/user/");
+        console.log(newHref("docs/user/", "docs/2.7/user/"));
     } else if (originalHref.indexOf("docs/dev/") > -1) {
         window.location.href = newHref("docs/dev/", "docs/2.7/dev/");
     } else if (originalHref.indexOf("docs/admin/") > -1) {
@@ -50,6 +51,8 @@
         if (newHref.endsWith('.html')) {
             newHref = newHref.substr(0, newHref.length - 5) + "/";
         }
+        console.log(part1);
+        console.log(part2);
         return newHref;
     }
 </script>
