fix home page link

--- a/material/overrides/home_en.html
+++ b/material/overrides/home_en.html
@@ -500,7 +500,7 @@ This file was automatically generated - do not edit
 </div>
 
 <div class="open-source">
-  <p>Use Cases, visit <a href="https://cncf.io/"> wanted: who's using dubbo</a> to help improving dubbo better</p>
+  <p>Use Cases, visit <a href="https://github.com/apache/dubbo/issues/1012"> wanted: who's using dubbo</a> to help improving dubbo better</p>
 </div>
 <div class="top-hr hr-logos">
   <div class="logos">
