change background color

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,7 +4,7 @@ linkTitle = "Apache Dubbo Website"
 
 +++
 
-{{< blocks/cover title="Apache Dubbo" image_anchor="top" height="auto" color="orange" >}}
+{{< blocks/cover title="Apache Dubbo" image_anchor="top" height="auto" color="primary" >}}
 <div class="mx-auto">
     <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
     LEARN MORE <i class="fas fa-arrow-alt-circle-right ml-2"></i>
