--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -80,7 +80,7 @@ dev@dubbo.apache.org to discuss with the community
 We do a [Pull Request](https://github.com/apache/dubbo/pulls) contributions workflow on **GitHub**. New users are always welcome!
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fas fa-bullhorn" title="Read our blogs" url="/blog" %}}
+{{% blocks/feature icon="fas fa-bullhorn" title="Read our blogs" url="/en/blog" %}}
 For announcement of latest features etc.
 {{% /blocks/feature %}}
 {{< /blocks/section >}}
