--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -80,7 +80,7 @@ dev@dubbo.apache.org 参与社区的讨论
 我们通过 [Pull Request](https://github.com/apache/dubbo/pulls) 在 **GitHub** 上协作。我们期待您的加入！
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fas fa-bullhorn" title="请关注我们的技术博客！" url="/blog/zh" %}}
+{{% blocks/feature icon="fas fa-bullhorn" title="请关注我们的技术博客！" url="/zh/blog" %}}
 我们会在第一时间分享 Dubbo 新发布的特性和使用心得
 {{% /blocks/feature %}}
 {{< /blocks/section >}}
