--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -6,13 +6,13 @@ linkTitle = "Apache Dubbo Website"
 
 {{< blocks/cover title="Apache Dubbo" image_anchor="top" height="auto" color="primary" >}}
 <div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
+    <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs/quick-start" >}}">
     快速开始 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
     </a>
     <a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/apache/dubbo">
         GITHUB <i class="fab fa-github ml-2 "></i>
     </a>
-    <p class="lead mt-5">Apache Dubbo 是一款高性能、轻量级的开源 Java 服务框架</p>
+    <p class="lead mt-5">Apache Dubbo 是一款高性能、轻量级的开源服务框架</p>
     {{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
