Move Who is using to a seperated section

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -47,31 +47,7 @@ Dubbo provides rich tools for service governance and maintenance such as queryin
 {{% /blocks/feature %}}
 {{< /blocks/section >}}
 
-
-{{% blocks/lead color="info" %}}
-Who is using Dubbo
-
-Providing your info on [Wanted: who's using dubbo](https://github.com/apache/dubbo/issues/1012) to help improving dubbo better
-{{% /blocks/lead %}}
-
-{{< blocks/section >}}
-{{< figure src="/imgs/users_alibaba.png" height="80" width="140">}}
-{{< figure src="/imgs/users_icbc.png" height="80" width="140">}}
-{{< figure src="/imgs/users_telecom.png" height="80" width="140">}}
-{{< figure src="/imgs/users_yinlian.png" height="80" width="140">}}
-{{< figure src="/imgs/users_chinalife.png" height="80" width="140">}}
-{{< figure src="/imgs/users_wanglian.png" height="80" width="140">}}
-{{< figure src="/imgs/users_zhengcaiyun.png" height="80" width="140">}}
-{{< figure src="/imgs/users_kaola.png" height="80" width="140">}}
-{{< figure src="/imgs/users_didi.png" height="80" width="140">}}
-{{< figure src="/imgs/users_qunar.png" height="80" width="140">}}
-{{< figure src="/imgs/users_handu.png" height="80" width="140">}}
-{{< figure src="/imgs/users_dangdang.png" height="80" width="140">}}
-{{< figure src="/imgs/users_weidian.png" height="80" width="140">}}
-{{< figure src="/imgs/users_kingdee.png" height="80" width="140">}}
-{{< /blocks/section >}}
-
-{{< blocks/section >}}
+{{< blocks/section color="white" >}}
 {{% blocks/feature icon="far fa-envelope" title=" Subscribe **mailing list**" %}}
 dev@dubbo.apache.org to discuss with the community
 {{% /blocks/feature %}}
