--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -47,31 +47,7 @@ Apache Dubbo |ˈdʌbəʊ| 提供了六大核心能力：面向接口代理的高
 {{% /blocks/feature %}}
 {{< /blocks/section >}}
 
-
-{{% blocks/lead color="info" %}}
-谁在使用 Dubbo
-
-请在 [Wanted: who's using dubbo](https://github.com/apache/dubbo/issues/1012) 上提供信息来帮助 Dubbo 做的更好。
-{{% /blocks/lead %}}
-
-{{< blocks/section >}}
-{{< figure src="/imgs/users_alibaba.png" height="80" width="140">}}
-{{< figure src="/imgs/users_icbc.png" height="80" width="140">}}
-{{< figure src="/imgs/users_telecom.png" height="80" width="140">}}
-{{< figure src="/imgs/users_yinlian.png" height="80" width="140">}}
-{{< figure src="/imgs/users_chinalife.png" height="80" width="140">}}
-{{< figure src="/imgs/users_wanglian.png" height="80" width="140">}}
-{{< figure src="/imgs/users_zhengcaiyun.png" height="80" width="140">}}
-{{< figure src="/imgs/users_kaola.png" height="80" width="140">}}
-{{< figure src="/imgs/users_didi.png" height="80" width="140">}}
-{{< figure src="/imgs/users_qunar.png" height="80" width="140">}}
-{{< figure src="/imgs/users_handu.png" height="80" width="140">}}
-{{< figure src="/imgs/users_dangdang.png" height="80" width="140">}}
-{{< figure src="/imgs/users_weidian.png" height="80" width="140">}}
-{{< figure src="/imgs/users_kingdee.png" height="80" width="140">}}
-{{< /blocks/section >}}
-
-{{< blocks/section >}}
+{{< blocks/section color="white" >}}
 {{% blocks/feature icon="far fa-envelope" title="订阅邮件组" %}}
 dev@dubbo.apache.org 参与社区的讨论
 {{% /blocks/feature %}}
