--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -14,9 +14,7 @@ linkTitle = "Apache Dubbo Website"
     </a>
     <p class="lead mt-5 font-weight-bold">Apache Dubbo 是一款微服务框架，为大规模微服务实践提供高性能 RPC 通信、流量治理、可观测性等解决方案，<br/>
         涵盖 Java、Golang 等多种语言 SDK 实现。</p>
-    <div class="mx-auto mt-5">
-        {{< blocks/link-down color="white" >}}
-    </div>
+    {{% blocks/link-down color="white" %}}
 </div>
 {{< /blocks/cover >}}
 
