--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -17,7 +17,9 @@ linkTitle = "Apache Dubbo Website"
     </a>
     <p class="lead mt-5">Apache Dubbo is a high-performance, java based open source RPC framework.</p>
     {{< blocks/link-down color="info" >}}
+    
 </div>
+{{< blocks/link-down color="white" >}}     
 {{< /blocks/cover >}}
 
 {{% blocks/lead color="primary" %}}
