--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -53,7 +53,7 @@ Dubbo provides rich tools for service governance and maintenance such as queryin
 {{< /blocks/section >}}
 
 {{< blocks/section color="white" >}}
-{{% blocks/feature icon="far fa-envelope" title=" Subscribe **mailing list**" %}}
+{{% blocks/feature icon="far fa-envelope" title=" Subscribe mailing list" %}}
 dev@dubbo.apache.org to discuss with the community
 {{% /blocks/feature %}}
 
