Add algolia search

--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -6,6 +6,7 @@ linkTitle = "Apache Dubbo Website"
 
 {{< blocks/cover title="Apache Dubbo" image_anchor="top" height="full" color="secondary" >}}
 <div class="mx-auto">
+    <div id="docsearch_zh_home" class="btn btn-lg mr-3 mb-4"></div>
     <a class="btn btn-lg btn-primary mr-3 mb-4" href='{{< relref "/overview/quickstart/" >}}'>
         快速开始 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
     </a>
