--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -10,8 +10,11 @@ linkTitle = "Apache Dubbo Website"
     <a class="btn btn-lg btn-primary mr-3 mb-4" href='{{< relref "/overview/quickstart/" >}}'>
         快速开始 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
     </a>
-    <a class="btn btn-lg btn-secondary mr-3 mb-4" href='{{< relref "/overview/whatsnew/" >}}'>
+    <a class="btn btn-lg btn-success mr-3 mb-4" href='{{< relref "/overview/what/dubbo3/index.html" >}}'>
         Dubbo3 速览<i class="fas fa-book-open ml-2"></i>
+    </a>
+    <a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/apache/dubbo">
+        GITHUB <i class="fab fa-github ml-2 "></i>
     </a>
     <p class="lead mt-5 font-weight-bold">Apache Dubbo 是一款微服务框架，为大规模微服务实践提供高性能 RPC 通信、流量治理、可观测性等解决方案，<br/>
         涵盖 Java、Golang 等多种语言 SDK 实现。</p>
