Hide search in home page

--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -3,7 +3,9 @@ title = "Apache Dubbo"
 linkTitle = "Apache Dubbo Website"
 
 +++
-
+<script>
+    document.getElementById("docsearch").style.display="none";
+</script>
 {{< blocks/cover title="Apache Dubbo" image_anchor="top" height="full" color="secondary" >}}
 <div class="mx-auto">
     <div id="docsearch_zh_home" class="btn btn-lg mr-3 mb-4"></div>
